# int-dec-format-tests

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
results/: arm-A5-1GHz-long-long.txt  arm-A5-1GHz-without-long-long.txt  linux-VM-clang-intel-core-i7-2.6GHz.txt  linux-VM-gcc-32bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-64bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-intel-core-i7-2.6GHz.txt  macosx-clang-32bit-intel-core-i5-2.3GHz.txt  macosx-clang-64bit-intel-core-i5-2.3GHz.txt  macosx-clang-intel-core-i5-2.3GHz.txt  windows-msvc-2013-32bit-intel-core-i7-2.6GHz.txt  windows-msvc-2013-64bit-intel-core-i7-2.6GHz.txt
results/reverse_vs_karma/: arm-A5-1GHz-long-long.txt  arm-A5-1GHz-without-long-long.txt  linux-VM-clang-32bit-intel-core-i7-2.6GHz.txt  linux-VM-clang-64bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-32bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-64bit-intel-core-i7-2.6GHz.txt  macosx-clang-32bit-intel-core-i5-2.3GHz.txt  macosx-clang-64bit-intel-core-i5-2.3GHz-short.txt  macosx-clang-64bit-intel-core-i5-2.3GHz-without-short.txt  windows-msvc-2013-32bit-intel-core-i7-2.6GHz.txt  windows-msvc-2013-64bit-intel-core-i7-2.6GHz.txt
results/reverse_vs_tmpbuf/: arm-A5-1GHz-long-long.txt  arm-A5-1GHz-without-long-long.txt  linux-VM-clang-32bit-intel-core-i7-2.6GHz.txt  linux-VM-clang-64bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-32bit-intel-core-i7-2.6GHz.txt  linux-VM-gcc-64bit-intel-core-i7-2.6GHz.txt  macosx-clang-32bit-intel-core-i5-2.3GHz.txt  macosx-clang-64bit-intel-core-i5-2.3GHz-short.txt  macosx-clang-64bit-intel-core-i5-2.3GHz-without-short.txt  windows-msvc-2013-32bit-intel-core-i7-2.6GHz.txt  windows-msvc-2013-64bit-intel-core-i7-2.6GHz.txt
source/: Algos.hpp  CMakeLists.txt  CountDigits.hpp  Input.hpp  Output.cpp  Output.hpp  Output.ipp  PickFastest.hpp  Runner.hpp  Timer.hpp  main.cpp
source/algos/: alexandrescu.hpp  counting.hpp  cppx.hpp  format.h  format_buffer.hpp  hybrid.hpp  reverse.hpp  tmpbuf.hpp
